IMPALA-10276: thread-safe access to RuntimeProfile::counter_map_

The bug was that 'counter_map_' can be mutated concurrent with
total_time_counter() or inactive_timer() being called.

This is fixed by storing a pointer directly to those counters
and bypassing 'counter_map_'. This is then thread-safe and
also has low overhead (adding lock acquisitions might have
some perf impact, since total_time_counter() is called
throughout query execution).

Change-Id: Ic21a13acf9c7c326a27334e61ce3729f1e3cab42
Reviewed-on: http://gerrit.cloudera.org:8080/16739
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>